--- a/README
+++ b/README
@@ -33,25 +33,25 @@ Table of Contents:
 Url address to use on localhost
 Using Postman variable which you can take from 'Variable.postman_environment.json'
 
-    {{localhost}}{{post}}<title>
-    {{localhost}}{{post}}<title>/update
-    {{localhost}}{{post}}<title>/delete
-    {{localhost}}{{post}}create
+    {{localhost}}{{post}}/<title>
+    {{localhost}}{{post}}/<title>/update
+    {{localhost}}{{post}}/<title>/delete
+    {{localhost}}{{posts}}/create
     # comment url
     {{localhost}}{{all_comments}}<title>"
-    {{localhost}}{{commentst}}<title>-<id_comment>
-    {{localhost}}{{commentst}}<title>-<id_comment>/update
-    {{localhost}}{{commentst}}<title>/create
-    {{localhost}}{{commentst}}<title>-<id_comment>/delete
+    {{localhost}}{{commentst}}/<title>-<id_comment>
+    {{localhost}}{{commentst}}/<title>-<id_comment>/update
+    {{localhost}}{{commentst}}/<title>/create
+    {{localhost}}{{commentst}}/<title>-<id_comment>/delete
     # vote post url
-   {{localhost}}{{vote}}<title>-<vote_request>", api_vote_post_view, name="vope_comment"),
+   {{localhost}}{{vote}}/<title>-<vote_request>", api_vote_post_view, name="vope_comment"),
 
 Or enter url manually
     # post url
     http://localhost:8000/api/post_view/<title>
     http://localhost:8000/api/post_view/<title>/update
     http://localhost:8000/api/post_view/<title>/delete
-    http://localhost:8000/api/post_view/create
+    http://localhost:8000/api/post/create
     # comment url
     http://localhost:8000/api/all_comments/<title>"
     http://localhost:8000/api/comment/<title>-<id_comment>
